# netallion-mcp-lite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  __init__.py  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml
src/netallion_mcp_lite/: __init__.py  redaction.py  rules.py  scanner.py  server.py
tests/: test_public_firewall.py  test_redaction.py  test_rules.py  test_scanner.py  test_server.py
